--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/testbase
-spring.datasource.username=Fedor
-spring.datasource.password=mysqllover
+spring.datasource.url=jdbc:mysql://localhost:3306/check
+spring.datasource.username=root
+spring.datasource.password=root
