--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 
+    //compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+
     // JPA Data: Repositories, Entities, Hibernate, etc
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
