--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Feb 25 15:04:56 MSK 2018
+#Sun Mar 18 15:09:18 GMT+03:00 2018
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.13-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.13-all.zip
+zipStoreBase=GRADLE_USER_HOME
