--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 jar {
     baseName = 'gs-accessing-data-mysql'
@@ -27,12 +28,13 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 
-    //compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
     // JPA Data: Repositories, Entities, Hibernate, etc
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    // https://mvnrepository.com/artifact/javax.servlet/jstl
+    compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.22'
+
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
 
