--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/whoislast
-spring.datasource.username=root
-spring.datasource.password=dno228
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+
+server.servlet.contextPath=/test
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
