--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
+    compile 'javax.servlet:jstl:1.2'
 
     // Use MySQL Connector-J
     compile 'mysql:mysql-connector-java'
