--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,14 @@ dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
+    compile("org.springframework.boot:spring-boot-starter-security")
+
     // JPA Data: Repositories, Entities, Hibernate, etc
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
+    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.0'
+
 
     compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.22'
 
