FIX: threw exception when asked to show all queues while you aren't in any group #WSL-61

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,13 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 
+    compile("org.springframework.boot:spring-boot-starter-mail")
+
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
     compile("org.springframework.boot:spring-boot-starter-security")
+
+    compile group: 'org.springframework', name: 'spring-context-support', version: '3.2.2.RELEASE'
 
     // JPA Data: Repositories, Entities, Hibernate, etc
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
