--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+
+    compile 'javax.mail:mail:1.4.7'
+    compile 'jaf:activation:1.0.2'
+
     compile("org.springframework.boot:spring-boot-starter-web")
 
     compile("org.springframework.boot:spring-boot-starter-mail")
@@ -34,7 +38,7 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-security")
 
-    compile group: 'org.springframework', name: 'spring-context-support', version: '3.2.2.RELEASE'
+    compile 'org.springframework:spring-context-support:4.1.3.RELEASE'
 
     // JPA Data: Repositories, Entities, Hibernate, etc
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
